@@ -5,6 +5,9 @@ HISTORY
 - Don't fail if kupu_library_tool is not available
   [naro]
 
+- #155 transform can now handle anchors in resolveuid links
+  (added test in transforms.txt)
+
 1.1rc9 (2010-02-18)
 -------------------
 
